# foe-city-planner

./: .gitignore  README.md  city-user-data.json  metadata-grid.json  pyproject.toml
docs/superpowers/plans/: 2026-06-17-foe-optimizer-phase0-phase1.md  2026-06-18-foe-anneal.md  2026-06-18-foe-localsearch.md  2026-06-18-foe-phase2-repack.md  2026-06-19-foe-articulation-prune.md  2026-06-19-foe-multi-schema-loader.md  2026-06-19-foe-true-objective-anneal.md  2026-06-20-foe-gapfill.md  2026-06-20-foe-packer-multistart.md  2026-06-20-foe-packer-roadmin.md  2026-06-20-foe-shortside-facing.md  2026-06-20-foe-treepack.md  2026-06-21-foe-web-ui.md  2026-06-22-foe-polish-pipeline.md
foeopt/: anneal.py  build.py  catalog.py  cli.py  editing.py  loader.py  localsearch.py  model.py  packer.py  packing.py  polish.py  quality.py  region.py  report.py  rlenv.py  router.py  validate.py  viz.py
rl/: README.md  __init__.py  curriculum.py  encode.py  eval.py  policy.py  ppo.py  train.py
scripts/: sweep.py
tasks/: lessons.md
tests/: conftest.py  test_anneal.py  test_anneal_cli.py  test_build.py  test_catalog.py  test_editing.py  test_improve_cli.py  test_layout_cli.py  test_loader.py  test_loader_cli.py  test_localsearch.py  test_model.py  test_packer.py  test_packing.py  test_polish.py  test_quality.py  test_region.py  test_report.py  test_rlenv.py  test_roads_cli.py  test_router.py  test_runner.py  test_scaffold.py  test_sparse_fixture.py  test_validate.py  test_viz.py  test_webapp.py
webapp/: app.py  runner.py
webapp/static/: app.js  index.html  style.css
(+15 files in other folders)
